--- a/visualization/losses/configs/knn.yaml
+++ b/visualization/losses/configs/knn.yaml
@@ -12,10 +12,10 @@ exp_names:
 - "K=12"
 - "K=16"
 
-width: 1400
+width: 1200
 height: 1200
 
-max_num_steps: 60001
+max_num_steps: 50001
 
 loss_min: 0.030
 loss_max: 0.042
@@ -23,3 +23,5 @@ loss_max: 0.042
 smooth: 0.5
 
 show_labels: False
+
+legend_location: "lower left"
