--- a/visualization/losses/configs/num_prims.yaml
+++ b/visualization/losses/configs/num_prims.yaml
@@ -12,10 +12,10 @@ exp_names:
 - "5000"
 - "1300"
 
-width: 1400
+width: 1200
 height: 1200
 
-max_num_steps: 60001
+max_num_steps: 50001
 
 loss_min: 0.02
 loss_max: 0.05
@@ -23,3 +23,5 @@ loss_max: 0.05
 smooth: 0.5
 
 show_labels: False
+
+legend_location: "lower left"
