--- a/metrics/configs/psnr+ssim_test_grayscale.yaml
+++ b/metrics/configs/psnr+ssim_test_grayscale.yaml
@@ -2,4 +2,4 @@ img_paths:
 - "/media/cs533r/data_b/533R_results_1/2d_images/albert/reference.jpg"
 - "/media/cs533r/data_b/533R_results_1/2d_images/albert/sape_albert_4k.png"
 
-csv_filename: "test_psnr+ssim_grayscale.csv"
+experiment_name: "test_grayscale"
