--- a/metrics/configs/psnr+ssim_ablation_spac_freq_effects.yaml
+++ b/metrics/configs/psnr+ssim_ablation_spac_freq_effects.yaml
@@ -5,4 +5,4 @@ img_paths:
 - "/media/cs533r/data_b/zhijie/AB_test_nips/spa_freq_effects/images/patch_pos=518+202_size=500+500_relu-based.png"
 - "/media/cs533r/data_b/zhijie/AB_test_nips/spa_freq_effects/images/patch_pos=518+202_size=500+500_sin-based.png"
 
-csv_filename: "ablation_spac_freq_effects.csv"
+csv_filename: "ablation_spac_freq_effects"
