--- a/metrics/configs/psnr+ssim_test_rgb.yaml
+++ b/metrics/configs/psnr+ssim_test_rgb.yaml
@@ -6,4 +6,4 @@ img_paths:
 - "/media/cs533r/data_b/zhijie/AB_test_nips/knn/images/k=12.jpg"
 - "/media/cs533r/data_b/zhijie/AB_test_nips/knn/images/k=16.jpg"
 
-csv_filename: "psnr+ssim_test_rgb.csv"
+experiment_name: "test_rgb"
