--- a/metrics/configs/f_score_test_beard_man.yaml
+++ b/metrics/configs/f_score_test_beard_man.yaml
@@ -1,6 +1,8 @@
 mesh_paths:
 - "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/beard_man.ply"
 - "/media/cs533r/data_b/bacon_results/3d/outputs_multiscale_normalized_256/bacon_beard_man_multiscale_4.obj"
+- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/sape_256.obj"
+- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/siren_256.ply"
 
 experiment_name: "test"
 
