--- a/metrics/configs/f_score_test_beard_man.yaml
+++ b/metrics/configs/f_score_test_beard_man.yaml
@@ -1,12 +1,13 @@
 mesh_paths:
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/beard_man.ply"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/beard_man/normalized/gt.obj"
 - "/media/cs533r/data_b/bacon_results/3d/outputs_multiscale_normalized_256/bacon_beard_man_multiscale_4.obj"
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/sape_256.obj"
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/beard_man/normalized/siren_256.ply"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/beard_man/normalized/sape_256.obj"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/beard_man/normalized/siren_256.ply"
 
 experiment_name: "test"
 
 cube_side_length: 1.0
 
-cube_side_factors:
-- 2000
+cube_side_factor: 500
+
+normalize: True
