--- a/metrics/configs/iou_test.yaml
+++ b/metrics/configs/iou_test.yaml
@@ -1,8 +1,10 @@
 mesh_paths:
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/bimba/bimba_gt_normalized.ply"
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/bimba/bimba_instantngp_normalized.ply"
-- "/media/cs533r/data_b/Figure_1_to_5/fig_3d_comparison/bimba/bimba_lslayer_normalized.ply"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/bimba/bimba_gt_normalized.ply"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/bimba/bimba_instantngp_normalized.ply"
+- "/media/cs533r/data_b/figures_and_tables/fig_3d_comparison/bimba/bimba_lslayer_normalized.ply"
 
 experiment_name: "test"
 
 scale: 1
+
+normalize: True
