--- a/metrics/configs/psnr_test_grayscale.yaml
+++ b/metrics/configs/psnr_test_grayscale.yaml
@@ -3,3 +3,5 @@ img_paths:
 - "/media/cs533r/data_b/533R_results_1/2d_images/albert/sape_albert_4k.png"
 
 experiment_name: "test_grayscale"
+
+grayscale: True
