--- a/metrics/configs/chamfer_distance_test.yaml
+++ b/metrics/configs/chamfer_distance_test.yaml
@@ -1,7 +1,14 @@
-mesh_paths:
-- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/armadillo.obj"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/armadillo_base.obj"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/armadillo.ply"
+gt_mesh_paths:
+- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/airplane.obj"
+- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/bimba.obj"
+
+pred_mesh_paths:
+  instantngp:
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/airplane_hashgrid.obj"
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/bimba_hashgrid.obj"
+  ldif:
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/airplane.ply"
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/bimba.ply"
 
 experiment_name: "test"
 
