--- a/metrics/configs/metro_test.yaml
+++ b/metrics/configs/metro_test.yaml
@@ -1,15 +1,17 @@
-mesh_paths:
-- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/armadillo.obj"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/armadillo_base.obj"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/armadillo.ply"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/FFN/armadillo.ply"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/siren/armadillo.ply"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/bacon/bacon_armadillo_multiscale_4.obj"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/sape/armadillo_1024.ply"
-- "/media/cs533r/data_b/533R_results_1/3d_shapes/lslayer/armadillo_2022-05-26-04-02-26_1024_result.ply"
+gt_mesh_paths:
+- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/airplane.obj"
+- "/media/cs533r/data_b/normalized_GT_3D_shapes/obj/bimba.obj"
+
+pred_mesh_paths:
+  instantngp:
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/airplane_hashgrid.obj"
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/instantngp/bimba_hashgrid.obj"
+  ldif:
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/airplane.ply"
+    - "/media/cs533r/data_b/533R_results_1/3d_shapes/ldif/bimba.ply"
 
 experiment_name: "test"
 
-num_samples: 100000
-
 normalize: True
+
+num_points_to_sample: 100000
