--- a/metrics/configs/sdf_test.yaml
+++ b/metrics/configs/sdf_test.yaml
@@ -14,17 +14,16 @@ experiment_name: "test"
 
 normalize: True
 
+# chamfer/metro
+num_points_to_sample: 100000
+
 # chamfer
 metric: "l2"
-num_points_to_sample: 100000
 square_distances: False
 
 # f-score
 cube_side_length: 1.0
 cube_side_factor: 2000
-
-# metro
-num_samples: 100000
 
 # iou
 scale: 1
