added more configs

--- a/metrics/configs/sdf_bacon+siren+instant-ngp.yaml
+++ b/metrics/configs/sdf_bacon+siren+instant-ngp.yaml
@@ -1,43 +1,67 @@
 gt_mesh_paths:
-- "/media/cs533r/data_b/data/3d/obj/armadillo.obj"
-- "/media/cs533r/data_b/data/3d/obj/at-ot.obj"
-- "/media/cs533r/data_b/data/3d/obj/engine.obj"
-- "/media/cs533r/data_b/data/3d/obj/gear_shift.obj"
-- "/media/cs533r/data_b/data/3d/obj/guangong.obj"
-- "/media/cs533r/data_b/data/3d/obj/lion.obj"
-- "/media/cs533r/data_b/data/3d/obj/ninjago_city.obj"
-- "/media/cs533r/data_b/data/3d/obj/oak_tree.obj"
+# - "/media/cs533r/data_b/data/3d/obj/armadillo.obj"
+# - "/media/cs533r/data_b/data/3d/obj/at-ot.obj"
+# - "/media/cs533r/data_b/data/3d/obj/engine.obj"
+# - "/media/cs533r/data_b/data/3d/obj/gear_shift.obj"
+# - "/media/cs533r/data_b/data/3d/obj/guangong.obj"
+# - "/media/cs533r/data_b/data/3d/obj/lion.obj"
+# - "/media/cs533r/data_b/data/3d/obj/ninjago_city.obj"
+# - "/media/cs533r/data_b/data/3d/obj/oak_tree.obj"
+- "/media/cs533r/data_b/data/3d/obj/asian_dragon.obj"
+- "/media/cs533r/data_b/data/3d/obj/beard_man.obj"
+- "/media/cs533r/data_b/data/3d/obj/camera.obj"
+- "/media/cs533r/data_b/data/3d/obj/david.obj"
+- "/media/cs533r/data_b/data/3d/obj/dragon.obj"
+- "/media/cs533r/data_b/data/3d/obj/dragon_warrior.obj"
 
 pred_mesh_paths:
   bacon:
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_armadillo_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_at-ot_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_engine_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_gear_shift_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_guangong_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_lion_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_ninjago_city_4.obj"
-  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_oak_tree_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_armadillo_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_at-ot_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_engine_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_gear_shift_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_guangong_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_lion_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_ninjago_city_4.obj"
+  # - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_oak_tree_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_asian_dragon_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_beard_man_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_camera_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_david_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_dragon_4.obj"
+  - "/media/cs533r/data_b/bacon_results/3d/bacon_default_multi/bacon_default_multi_dragon_warrior_4.obj"
   siren:
-  - "/media/cs533r/data_b/siren_results/3d/default/armadillo.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/at-ot.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/engine.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/gear_shift.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/guangong.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/lion.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/ninjago_city.ply"
-  - "/media/cs533r/data_b/siren_results/3d/default/oak_tree.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/armadillo.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/at-ot.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/engine.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/gear_shift.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/guangong.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/lion.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/ninjago_city.ply"
+  # - "/media/cs533r/data_b/siren_results/3d/default/oak_tree.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/asian_dragon.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/beard_man.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/camera.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/david.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/dragon.ply"
+  - "/media/cs533r/data_b/siren_results/3d/default/dragon_warrior.ply"
   instant-ngp:
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/armadillo.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/at-ot.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/engine.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/gear_shift.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/guangong.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/lion.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/ninjago_city.ply"
-  - "/media/cs533r/data_b/instant-ngp_results/3d/default/oak_tree.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/armadillo.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/at-ot.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/engine.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/gear_shift.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/guangong.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/lion.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/ninjago_city.ply"
+  # - "/media/cs533r/data_b/instant-ngp_results/3d/default/oak_tree.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/asian_dragon.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/beard_man.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/camera.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/david.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/dragon.ply"
+  - "/media/cs533r/data_b/instant-ngp_results/3d/default/dragon_warrior.ply"
 
-experiment_name: "bacon+siren+instant-ngp"
+experiment_name: "bacon+siren+instant-ngp_jul18"
 
 normalize: False
 
